[gd_scene load_steps=2 format=2]

[ext_resource path="res://gui/menu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.294118 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -137.0
margin_top = -89.0
margin_right = 137.0
margin_bottom = 89.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
margin_right = 242.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
text = "Sheepmarbles"
align = 1
valign = 1

[node name="ResumeButton" type="Button" parent="Panel/VBoxContainer"]
margin_top = 36.0
margin_right = 242.0
margin_bottom = 56.0
text = "Resume"

[node name="SaveButton" type="Button" parent="Panel/VBoxContainer"]
margin_top = 60.0
margin_right = 242.0
margin_bottom = 80.0
text = "Save race"

[node name="LoadButton" type="Button" parent="Panel/VBoxContainer"]
margin_top = 84.0
margin_right = 242.0
margin_bottom = 104.0
text = "Load race"

[node name="Control" type="Control" parent="Panel/VBoxContainer"]
margin_top = 108.0
margin_right = 242.0
margin_bottom = 116.0
rect_min_size = Vector2( 0, 8 )

[node name="QuitButton" type="Button" parent="Panel/VBoxContainer"]
margin_top = 120.0
margin_right = 242.0
margin_bottom = 140.0
text = "Quit"
[connection signal="pressed" from="Panel/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
